assets/css/styles.css
*, html {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

Body {
	padding:0;
	margin:0;
	font-family: 'Noto Sans';
  position: relative; 
  padding-top: 55px;
}

hr {
  border: none; 
  background-color: #d2d3d9; 
  color: #d2d3d9; 
  height: 1px;
  margin: 0; 
  padding: 0; 
}

#surveywidget-container {
  position: fixed;
  bottom: 0;
  width: 306px;
  height: 331px;
  right: 0%;
}

#surveywidget-rectangle {
  position: absolute;
  width: 306px;
  height: 331px;
  right: 54px;
  bottom: -1px;

  background: #FFFFFF;
  border: 1px solid #D2D3D9;
  box-sizing: border-box;
  box-shadow: 0px 4px 4px rgba(180, 180, 180, 0.25);
  border-radius: 10px 10px 0px 0px;
}

#surveywidget-container input[type=checkbox] {
  border: 1px solid #D2D3D9;
  width: 22px;
  height: 22px;
  position: relative;
  vertical-align: middle;
}

.surveywidget-formfield {
  padding-left: 10px;
  margin-bottom: 1px;
  height: 23px;
  margin-top: 10px;
}

#surveywidget-container input[type=text] {
  padding: 5px 10px;
  margin-left: 3px;
  font-family: Noto Sans;
  font-size: 14px;
}

#surveywidget-container label {
  display: inline-block;
  padding-right: 10px;
  font-family: Noto Sans;
  font-size: 14px;
  line-height: 23px;
}

#surveywidget-container input[type=submit] {
  height: 34px;
  margin-top:20px;
  margin-left: 13px;
  width: 110px;
  background: #FFFFFF;
  border: 1px solid #D2D3D9;
  border-radius: 2px;
  font-family: Noto Sans;
  font-style: normal;
  font-weight: bold;
  font-size: 13px;
  line-height: 18px;
}

#v2-buynowModal, #v2-messageMeModal {
  position: fixed;
  left: 50%;
  top: 50%;
  background: #FFFFFF;
  border-radius: 14px;
  width: 240px;
  padding: 30px;
  height: 310px;
  z-index: 1000;
  transform: translate(-50%, -50%);
}

#v2-buynowDesktopModal, #v2-messageMeDesktopModal {
  position: fixed;
  left: 50%;
  top: 50%;
  background: #FFFFFF;
  border-radius: 14px;
  padding: 30px;
  z-index: 1000;
  width: 600px;
  height: 450px;
  border-radius: 14px;
  transform: translate(-50%, -50%);
}

.v2-modal-header-text {
  font-family: Noto Sans;
  font-style: normal;
  font-weight: bold;
  font-size: 18px;
  line-height: 129.6%;
  margin-bottom: 10px;
  color: #000000;
}

.v2-modal-header-text-desktop {
  font-family: Noto Sans;
  font-style: normal;
  font-weight: bold;
  font-size: 24px;
  line-height: 33px;
  color: #000000;
}

.v2-modal-description {
  font-family: Noto Sans;
  font-size: 14px;
  line-height: 22px;
  color: #777777;
}

.v2-modal-description-desktop {
  font-family: Noto Sans;
  font-size: 14px;
  line-height: 22px;
  color: #777777;
  margin-top: 10px;
}

.v2-modal-software-options {
  display: flex;
  align-items: center;
  justify-content: center;
}

.v2-modal-splitter {
  width: 0px;
  height: 210px;
  border: 1px solid #EFEFEF;
  margin: 30px 45px 0 45px;
}

.carousel-next-btn, .carousel-back-btn {
  cursor: pointer;
}

.v2-modal-icon {
  display: flex;
  margin-top: 38px;
  margin-bottom: 13px;
  justify-content: center;
}

.v2-storeListingDescriptionTitle, .v2-storeListingReviewsTitle, .v2-storeListingShippingTitle,
.v2-storeListingReturnPolicyTitle, .v2-storeListingTOSTitle, .v2-storeListingYouMayAlsoLikeTitle {
  font-family: Noto Sans;
  font-style: normal;
  font-weight: bold;
  font-size: 24px;
  line-height: 33px;
  margin-bottom: 24px;
  color: #000000;
}

#v2-mayAlsoLikeContainer {
  width:1500px;
  margin: 0 auto;
  margin-bottom: 120px;
}

#v2-youmayalsolikeListings {
  display: flex;
  flex-wrap: wrap;
}

#widget-header {
  margin-top: 18px;
  margin-left: 20px;
  width: 240px;
  height: 46px;
  right: 100px;
  bottom: 266px;
  font-family: Noto Sans;
  font-style: normal;
  font-weight: bold;
  font-size: 16px;
  line-height: 23px;
  /* or 144% */

  color: #252525;
}

.Discover-Body-Listing-Box-Mobile {
  margin-right: 22px;
}

.Store-Widget-Notice-Box {
    width: 410px;
    box-sizing: border-box;
    padding: 5px;
    height:32px;
    border-radius: 2px;
    box-shadow: 0 1px 0 0 rgba(219, 219, 219, 0.5);
    background-color: #ffffff;
    border: solid 1px #d2d3d9;
    display: flex;
    color: #777777;
    flex-direction: row;
}
.Store-Widget-Notice-Box a {
  text-decoration: none;
}
.new-tag {
    width: 20px;
    height: 14px;
    line-height: 14px;
    color: #777777;
    margin-right: 5px;
    border-radius: 2px;
    background-color: #ea5b11;
    box-shadow: 0 1px 0 0 #de520a;
    font-size: 8.5px;
    font-weight: bold;
    font-style: normal;
    font-stretch: normal;
    letter-spacing: normal;
    text-align: left;
    color: #ffffff;
    padding: 2px 5px;
    position: absolute;

}

.column-sm { font-size:11px; }

input[type=text] {
  background-color: #fbfbfb;
  border: solid 1px #d2d3d9;
  border-radius: 2px;
  transition: all 0.2s ease;
}

input[type=text]:hover {
  border: solid 1px #9c9c9c;
  outline: none;
}
input[type=text]:focus {
  background-color: #fff;
  border: solid 1px #000;
  outline: none;
}

h1 {  margin-bottom: 5px; font-size:24px; }

h1 a {
  text-decoration: none;
}

.Search-Results-Container { 
	display:flex;
    flex-flow: row wrap;
    margin-top: -12px;
}

.modifier-caption { font-size: 11px !important; color: #777777; }
.cryptolisting-marketprice ion-icon { font-size: 16px; color: #2aae24; vertical-align: middle; }
div.cryptolisting-above { font-size: 16px; color: red; }
div.cryptolisting-below { font-size: 16px; color: #2aae24; }
.cryptolisting-above ion-icon { color: red; vertical-align: middle; }

.cryptolisting-below ion-icon { color: green; vertical-align: middle; }

#Store-Header-Mobile, .mobile-store-navbar, .mobile-store-caption {
	display: none;
}

.store-social-mobile-container { display: none; }
	
.More-Listings-Mobile {
	width: 100%;
    display: flex;
    flex-wrap: wrap;
}

.mobile-visible {
  display: none;
}

#listing-metadata-box {
	display: flex;
    justify-content: center;
    align-items: center;
    height:27px;
    margin: 12px 0;
}
/* ... */

